# home-environments

./: Cargo.toml  README.md  compose.yaml
migrations/: 20251225142549_init.sql  20251225171744_add_rooms_and_switchbot_device_locations_indexes.sql
src/: db.rs  lib.rs  switchbot.rs
src/switchbot/: device.rs  device_type.rs  measurement.rs
