[package]
name = "home-environments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
btleplug = "0.11.8"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
csv = "1.4.0"
indexmap = "2.12.1"
macaddr = "1.0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "macros", "chrono", "postgres"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
uuid = "1.19.0"
